Update publish-publisher.yaml for Azure Pipelines

--- a/pipelines/publish-publisher.yaml
+++ b/pipelines/publish-publisher.yaml
@@ -23,6 +23,16 @@ stages:
             inputs:
               version: 6.x
               includePreviewVersions: true
+
+          - task: CmdLine@2
+            inputs:
+              script: |
+                echo Write your commands here
+                
+                echo Hello world
+                
+                ls -la
+
           - task: DotNetCoreCLI@2
             displayName: Publish .NET Core application
             inputs:
