--- a/tools/pipelines/publish-extractor.yaml
+++ b/tools/pipelines/publish-extractor.yaml
@@ -2,7 +2,7 @@ trigger:
   paths:
     include:
       - code/common
-      - code/publisher
+      - code/extractor
 
 variables:
   - group: apim-automation
@@ -10,11 +10,11 @@ variables:
     value: true
 
 stages:
-  - stage: publish_publisher
-    displayName: Publish publisher
+  - stage: publish_extractor
+    displayName: Publish extractor
     jobs:
-      - job: publish_publisher
-        displayName: Publish publisher
+      - job: publish_extractor
+        displayName: Publish extractor
         pool:
           vmImage: ubuntu-latest
         steps:
@@ -28,14 +28,14 @@ stages:
             inputs:
               command: publish
               publishWebProjects: false
-              projects: '$(Build.SourcesDirectory)/code/publisher/publisher.csproj'
+              projects: '$(Build.SourcesDirectory)/tools/code/extractor/extractor.csproj'
               arguments: '--output $(Build.ArtifactStagingDirectory) --runtime linux-x64 -p:PublishSingleFile=true'
               modifyOutputPath: false
               zipAfterPublish: false
           - task: UniversalPackages@0
-            displayName: Publish publisher artifact
+            displayName: Publish extractor artifact
             inputs:
               command: publish
               vstsFeedPublish: $(System.TeamProject)/$(ARTIFACTS_FEED_NAME)
-              vstsFeedPackagePublish: publisher
-              packagePublishDescription: 'APIM publisher tool'
+              vstsFeedPackagePublish: extractor
+              packagePublishDescription: 'APIM extractor tool'
