--- a/apimartifacts/apis/Echo API/Original/1/specification.yaml
+++ b/apimartifacts/apis/Echo API/Original/1/specification.yaml
@@ -9,7 +9,7 @@ paths:
   /resource:
     get:
       summary: Retrieve resource
-      description: A demonstration of a GET call on a sample resource. It is handled by an "echo" backend which returns a response equal to the request (the supplied headers and body are being returned as received).
+      description: this is a change A demonstration of a GET call on a sample resource. It is handled by an "echo" backend which returns a response equal to the request (the supplied headers and body are being returned as received).
       operationId: retrieve-resource
       parameters:
         - name: param1
