updating api specifications

--- a/apimartifacts/apis/Echo API/Original/1/specification.yaml
+++ b/apimartifacts/apis/Echo API/Original/1/specification.yaml
@@ -19,6 +19,7 @@ paths:
           schema:
             enum:
               - sample
+              - sample2
             type: string
             default: sample
         - name: param2
