--- a/apimartifacts/apis/Echo API/specification.yaml
+++ b/apimartifacts/apis/Echo API/specification.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: Echo API
+  title: Echo API2
   version: '1.0'
 servers:
   - url: https://gateway.contosoapi202201.com/echo
