--- a/apimartifacts/apis/Echo API/Original/1/specification.yaml
+++ b/apimartifacts/apis/Echo API/Original/1/specification.yaml
@@ -3,7 +3,7 @@ info:
   title: Echo API
   version: '1.0'
 servers:
-  - url: https://contosoapi202202.azure-api.net/echo
+  - url: https://gateway.contosoapi202201.com/echo
 paths:
   /resource:
     get:
