--- a/apimartifacts/apis/Echo API/Original/1/specification.yaml
+++ b/apimartifacts/apis/Echo API/Original/1/specification.yaml
@@ -100,3 +100,11 @@ components:
 security:
   - apiKeyHeader: [ ]
   - apiKeyQuery: [ ]
+x-ms-paths:
+  /resource:
+    get:
+      summary: GetPlus
+      operationId: getplus
+      responses:
+        '200':
+          description: 
