updated extract from apim instance apimartifacts

--- a/apimartifacts/apis/aaa/Original/1/specification.yaml
+++ b/apimartifacts/apis/aaa/Original/1/specification.yaml
@@ -9,10 +9,11 @@ paths:
   /resource:
     get:
       summary: get
+      description: get
       operationId: get
       responses:
         '200':
-          description: 
+          description: ''
 components:
   securitySchemes:
     apiKeyHeader:
