--- a/apimartifacts/apis/aaa/Original/1/specification.yaml
+++ b/apimartifacts/apis/aaa/Original/1/specification.yaml
@@ -14,6 +14,13 @@ paths:
       responses:
         '200':
           description: ''
+  /resorce:
+    get:
+      summary: getnew
+      operationId: getnew
+      responses:
+        '200':
+          description: 
 components:
   securitySchemes:
     apiKeyHeader:
